1.0.0rc7
* Wallet: more reorganizing and cleaning
* Wallet: removed "-hashes" option (added in 0.9.2)
* Reject blocks version < 2 of main chain's height >= 200000
* Check the block height from coinbase to match expected height value (for blocks version >=2)
* Check transactions for consistency and finality in parallel

1.0.0rc6 - 2014-05-28
* Wallet: "-raw" command can now sign also multisig inputs (if they already have the script)
* Stealth addresses: fixed the ephemkey's 03 issue (makes it incompatible with current DW)
* Wallet: lots of reorganizing, cleaing and some basic tests added

1.0.0rc5 - 2014-05-26
* btcversig tool: added Litecoin support (specify LTC address or add "-ltc" switch for testnet)
* lib/btc: BtcAddr.OutScript() handles version 48 (Litecoin's P2KH) & panics if cannot output right script
* WebUI: shows page generation time
* WebUI: fixed non-existing page tails
* Wallet: added litcoin mode ("-ltc" switch)
* New tool: "balio". Like "fetchbal", but also works with Testnet and Litecoin. Uses only "http://blockr.io/"

1.0.0rc4 - 2014-05-22
* secp256k1 uses precomputed constants instead of calculating them during initialization (wallet starts faster)
* Source files and packeges moved around like hell. Don't even ask, but it was a change for good.
* Btc: added API functions for HDWallets (see "wallethd.go")
* Wallet: you can add "seed" param to the config file, as a potential countermeasure against keyboard loggers
* Client: new TextUI commands ("arm", "unarm", "armed") help to secure your stealth addresses' scan-keys
* Client: the balance of all the wallets gets pre-cached while opening UTXO database
* Client: configuring "Memory.NoCacheBefore" can now lower mem usage with no much visible performance drop
* Client: "NoCacheBefore" can have a negative value, that will define an offset from the highest known block
* Client: More help topics in WebUI
* Further refactor of the code

0.9.14 - 2014-05-13 (1.0.0-rc2)