@@ -4,6 +4,7 @@
 * Reject blocks version < 2 of main chain's height >= 200000
 * Check the block height from coinbase to match expected height value (for blocks version >=2)
 * Check transactions for consistency and finality in parallel
+* PeersDB extrancted from "client/network" to "lib/others/peersdb"
 
 1.0.0rc6 - 2014-05-28
 * Wallet: "-raw" command can now sign also multisig inputs (if they already have the script)
